--- a/.editorconfig
+++ b/.editorconfig
@@ -8,4 +8,6 @@ indent_size=4
 insert_final_newline=true
 max_line_length=120
 trim_trailing_whitespace = true
-no-wildcard-imports=enabled
+
+[*.{kt,kts}]
+ij_kotlin_allow_trailing_comma = true
