--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -21,7 +21,9 @@ jobs:
         distribution: 'zulu'
         
     - name: Build with Gradle
-      run: ./gradlew clean build
+      run: |
+        chmod +x ./gradlew
+        ./gradlew clean build
       
     - name: Get current time
       uses: 1466587594/get-current-time@v2
