--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -19,11 +19,12 @@ jobs:
       with:
         java-version: '17'
         distribution: 'zulu'
-        
+    
+    - name: Make gradlew executable
+      run: chmod +x ./gradlew
+
     - name: Build with Gradle
-      run: |
-        chmod +x ./gradlew
-        ./gradlew clean build
+      run: ./gradlew clean build
        
     - name: Get current time
       uses: 1466587594/get-current-time@v2
