--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -20,6 +20,14 @@ jobs:
         java-version: '17'
         distribution: 'zulu'
 
+    - name: Set Yaml
+      uses: microsoft/variable-substitution@v1
+      with:
+        files: ./src/main/resources/application-prod.yml 
+      env:
+        spring.datasource.username: ${{ secrets.DB_USERNAME }} 
+        spring.datasource.password: ${{ secrets.DB_PASSWORD }} 
+
     - name: Build with Gradle
       run: |
         chmod +x ./gradlew
