--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -14,3 +14,9 @@ jwt:
   issuer: aimory_server
   clientSecret: ${JWT_CLIENT_SECRET}
   expirySeconds: 3600
+
+openai:
+  model: dall-e-3
+  api:
+    key: ${OPENAI_API_KEY}
+    url: https://api.openai.com/v1/images/generations
