CHORE: Github Actions Secrets 추가

--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -28,6 +28,11 @@ jobs:
         spring.datasource.username: ${{ secrets.DB_USERNAME }} 
         spring.datasource.password: ${{ secrets.DB_PASSWORD }}
         jwt.clientSecret: ${{ secrets.JWT_CLIENT_SECRET }}
+        cloud.aws.credentials.accessKey: ${{ secrets.AWS_ACCESS_KEY }}
+        cloud.aws.credentials.secretKey: ${{ secrets.AWS_SECRET_KEY }}
+        cloud.aws.s3.bucketName: ${{ secrets.S3_BUCKET_NAME }}
+        openai.api.key: $${{ secrets.OPENAI_API_KEY }}
+
 
     - name: Build with Gradle
       run: |
