FIX(#40): JWT 요청 header 변경(api_key -> Authorization)

--- a/src/main/resources/application-local.yml
+++ b/src/main/resources/application-local.yml
@@ -13,7 +13,7 @@ spring:
         format_sql: true
 
 jwt:
-  header: api_key
+  header: Authorization
   issuer: aimory_server
   clientSecret: YWltb3J5IHNlY3JldCBjbGllbnQgdGVzdCBrZXk=
   expirySeconds: 3600
